--- a/prework-study-guide/index.html
+++ b/prework-study-guide/index.html
@@ -11,6 +11,7 @@
     <header id="header">
       <h1>Prework Study Guide</h1>
       <img src="./assets/bowtie-cat.png" alt="Profile image of cat wearing a bow tie." />
+      <h2>✨ Open the Console to See What's Happening ✨</h2>
     </header>
     <main>
 
@@ -42,12 +43,27 @@
           <li>Git commands that I know, Git status, Git checkout, -b flags for new branch</li>
           <li>git status: checks what branch we are currently on</li>
           <li>git checkout -b branch-name: creates a new branch and switches to it</li>
+          <li>pwd Print Working Directory</li>
+          <li>CD is change directory</li>
+          <li>mkdir to make a folder</li>
+          <li>touch creates a file </li>
+          <li>mv to move files</li>
+          <li>up and down arrows goes through your command history</li>
+          <li>clear will clear the console</li>
+          <li>list = ls gives a list of files</li>
+          <li>cd .. to go back</li>
+          <li>cd .. && cd ..  Brings you to the first folder of the directory</li>
+          <li>*name of file* . will start that file</li>
+          <li>rm will remove file</li>
+          <li>rmdir will remove folder</li>
+          <li>exit will close the CLI</li>          
         </ul>
       </section>
    
       <section class="card" id="javascript-section">
    <h2>JavaScript</h2>
    <ul>
+    <li> /* is how to comment out */</li>
     <li> Javascript is the logic and user interaction a webpage displays</li>
   </ul>
       </section>
@@ -57,5 +73,6 @@
     <footer>
       <p>I can code!</p>
     </footer>
+    <script src="./assets/script.js"></script>
   </body>
 </html>
