--- a/prework-study-guide/index.html
+++ b/prework-study-guide/index.html
@@ -49,6 +49,10 @@
    <h2>JavaScript</h2>
    <ul>
     <li> Javascript is the logic and user interaction a webpage displays</li>
+    <li>A variable is a named container that allows us to store data in our code.</li>
+   <li>Control flow is the order in which a computer executes code in a script.</li>
+   <li>Be sure to use ; after certain ()</li>
+   <a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Math">Webdocs on Javascript math</a>
   </ul>
       </section>
 
